<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="it.unimib.disco.gruppoade.gamenow.fragments.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="it.unimib.disco.gruppoade.gamenow.fragments.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_comingsoon"
        android:name="it.unimib.disco.gruppoade.gamenow.fragments.comingsoon.ComingSoonFragment"
        android:label="@string/title_comingsoon"
        tools:layout="@layout/fragment_comingsoon" >
        <action
            android:id="@+id/displayGameInfo"
            app:destination="@id/gameInfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="it.unimib.disco.gruppoade.gamenow.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/gameInfoFragment"
        android:name="it.unimib.disco.gruppoade.gamenow.fragments.comingsoon.GameInfoFragment"
        tools:layout="@layout/fragment_game_info" >
        <argument
            android:name="game"
            app:argType="it.unimib.disco.gruppoade.gamenow.models.Game" />
    </fragment>
</navigation>
