<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.comingsoon.ComingSoonFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <Button
            android:id="@+id/button_all"
            android:layout_gravity="center_vertical"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="wrap_content"
            android:text="@string/btn_all"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccent" />

        <Button
            android:id="@+id/button_ps4"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="wrap_content"
            android:text="@string/btn_ps4"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/buttonBackground" />

        <Button
            android:id="@+id/button_xbox"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:textSize="10sp"
            android:layout_height="wrap_content"
            android:text="@string/btn_xbox"
            android:textColor="@color/white"
            android:backgroundTint="@color/buttonBackground" />

        <Button
            android:id="@+id/button_pc"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/btn_pc"
            android:textColor="@color/white"
            android:backgroundTint="@color/buttonBackground" />

        <Button
            android:id="@+id/button_switch"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight=".20"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/btn_switch"
            android:textColor="@color/white"
            android:backgroundTint="@color/buttonBackground"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@color/blackStroke"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="56dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:lottie_rawRes="@raw/pacman_loading"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />

    </FrameLayout>

</LinearLayout>
