<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="none">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameInfoActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frame_container">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/info_screen_frame">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/screenshot_na"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/gradient"
                    />
            </FrameLayout>

                <ImageView
                    android:id="@+id/gameinfo_cover"
                    android:layout_width="150dp"
                    android:layout_height="210dp"
                    android:src="@drawable/cover_na"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center_horizontal"
                    />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameinfo_title"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/gameinfo_placeholder_title"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameinfo_recyclerview"
            android:layout_gravity="center_horizontal" />

        <RatingBar
            android:id="@+id/gameinfo_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:rating="3.5"
            android:isIndicator="true"
            />

        <TextView
            android:id="@+id/gameinfo_desc"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="#99000000"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameinfo_placeholder_description"/>

        <View
            android:id="@+id/gameinfo_desc_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/blackStroke"/>



        <TextView
            android:id="@+id/gameinfo_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/gameinfo_desc"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/gameinfo_storyline"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="#99000000"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameinfo_placeholder_storyline"/>

        <View
            android:id="@+id/gameinfo_storyline_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/blackStroke"/>

        <TextView
            android:id="@+id/gameinfo_storyline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/gameinfo_desc"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/gameinfo_gameplays"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="#99000000"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameinfo_placeholder_gameplays"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/blackStroke"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameplays_recyclerview"
            android:layout_marginTop="8dp"/>

</LinearLayout>
</ScrollView>