<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.comingsoon.GameInfoFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:id="@+id/gameinfo_parent"
    android:scrollbars="none"
    android:layout_marginBottom="56dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/info_screen_frame"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/gameinfo_screen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/gradient" />


            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp">

                <ImageView
                    android:id="@+id/gameinfo_cover"
                    android:layout_width="150dp"
                    android:layout_height="210dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cover_na" />

                <ToggleButton
                    android:id="@+id/gameinfo_save_game"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:textOff=""
                    android:textOn=""
                    android:drawableTop="@drawable/ic_toggle_favnews"/>
            </FrameLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/gameinfo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/gameinfo_placeholder_title"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gameinfo_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <RatingBar
            android:id="@+id/gameinfo_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/gameinfo_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/gameinfo_placeholder_description"
            android:textColor="#99000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/gameinfo_desc_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/blackStroke" />


        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:id="@+id/gameinfo_desc_spinner"/>

        <TextView
            android:id="@+id/gameinfo_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gameinfo_storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/gameinfo_placeholder_storyline"
            android:textColor="#99000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/gameinfo_storyline_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/blackStroke" />

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:id="@+id/gameinfo_storyline_spinner"/>

        <TextView
            android:id="@+id/gameinfo_storyline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gameinfo_gameplays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/gameinfo_placeholder_gameplays"
            android:textColor="#99000000"
            android:textSize="22sp"
            android:textStyle="bold" />


        <View
            android:id="@+id/gameinfo_gameplays_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/blackStroke" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:id="@+id/gameplays_recyclerview"
            android:layout_margin="8dp"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>
</ScrollView>
